--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">Parking</string>
+    <string name="parking1_text">Available</string>
+    <string name="parking2_text">Available</string>
+    <string name="parking3_text">Available</string>
+    <string name="update_button">Update</string>
+    <string name="delete_button">Delete</string>
+    <string name="license_text"></string>
+    <string name="car_brand"></string>
+    <string name="owner_name"></string>
+    <string name="license_hint">License</string>
+    <string name="car_brand_hint">Car Brand</string>
+    <string name="owner_name_hint">Owner Name</string>
+
 </resources>
