--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,13 @@
     <string name="car_brand_hint">Car Brand</string>
     <string name="owner_name_hint">Owner Name</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="login_button">Log In</string>
+    <string name="password_hint">Password</string>
+    <string name="username_hint">Username</string>
+    <string name="username">Username = user</string>
+    <string name="password_text">Password = password</string>
+    <string name="about">About</string>
+
 </resources>
